--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <body>
   <h1>Paste Images and Zip</h1>
   <p>
-    Press <strong>Ctrl+V</strong> (or Cmd+V on Mac) anywhere on this page to paste images 
-    from your clipboard. You can then remove unwanted images and rename the file
+    Press <strong>Ctrl+V</strong> (or Cmd+V on Mac) on this page to paste images 
+    from your clipboard. You can then remove unwanted images or rename all images
     before downloading.
   </p>
 
